--- a/.github/workflows/translate-issues.yml
+++ b/.github/workflows/translate-issues.yml
@@ -11,3 +11,5 @@ jobs:
     uses: rimoapp/bilingual-github/.github/workflows/translate-issues.yml@main
     secrets: # Pass the GITHUB_TOKEN here
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} # Pass this if required
+    with:
+      issue_number: ${{ github.event.issue.number }}  # Pass the issue number from the event
