--- a/.github/workflows/translate-markdown.yml
+++ b/.github/workflows/translate-markdown.yml
@@ -8,5 +8,5 @@ on:
 jobs:
   call-translate-markdown:
     uses: rimoapp/bilingual-github/.github/workflows/translate-markdown.yml@main
-    with:
+    secrets:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
