--- a/.github/workflows/translate-issues.yml
+++ b/.github/workflows/translate-issues.yml
@@ -3,13 +3,16 @@ name: Translate GitHub Issues
 on:
   issues:
     types:
-      - opened
-      - edited
+      - labeled  
+      - edited            
 
 jobs:
   call-translate-issues:
+    if: |
+      github.event.label.name == 'need translation' ||
+      (github.event.action == 'edited' && contains(github.event.issue.labels.*.name, 'need translation'))
     uses: rimoapp/bilingual-github/.github/workflows/translate-issues.yml@main
-    secrets: 
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} 
+    secrets:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     with:
-      issue_number: ${{ github.event.issue.number }}  
+      issue_number: ${{ github.event.issue.number }}
