--- a/.github/workflows/transalte-comments.yml
+++ b/.github/workflows/transalte-comments.yml
@@ -5,9 +5,17 @@ on:
     types:
       - created
       - edited
+  issues:
+    types:
+      - labeled
+      - edited
+  workflow_dispatch:
 
 jobs:
   call-translate-comments:
+    if: |
+      github.event.label.name == 'need translation' ||
+      (github.event.action == 'edited' && contains(github.event.issue.labels.*.name, 'need translation'))
     uses: rimoapp/bilingual-github/.github/workflows/translate-comments.yml@main
     secrets:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
