--- a/.github/workflows/transalte-comments.yml
+++ b/.github/workflows/transalte-comments.yml
@@ -1,5 +1,4 @@
 name: Translate Issue Comments
-
 on:
   issue_comment:
     types:
@@ -8,17 +7,20 @@ on:
   issues:
     types:
       - labeled
-      - edited
   workflow_dispatch:
 
 jobs:
   call-translate-comments:
     if: |
-      github.event.label.name == 'need translation' ||
-      (github.event.action == 'edited' && contains(github.event.issue.labels.*.name, 'need translation'))
+      (github.event_name == 'issues' && github.event.label.name == 'need translation') ||
+      github.event_name == 'issue_comment' ||
+      github.event_name == 'workflow_dispatch'
     uses: rimoapp/bilingual-github/.github/workflows/translate-comments.yml@main
     secrets:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     with:
       issue_number: ${{ github.event.issue.number }}
-      comment_id: ${{ github.event.comment.id }}
+      comment_id: ${{ github.event.comment.id || '' }}
+      translate_all_comments: ${{ github.event_name == 'issues' }}
+
+
