--- a/.github/workflows/trigger-translation.yml
+++ b/.github/workflows/trigger-translation.yml
@@ -63,4 +63,5 @@ jobs:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     with:
       issue_number: ${{ github.event.issue.number || github.event.pull_request.number }}
-      comment_id: ${{ github.event.comment.id || github.event.review_comment.id || github.event.review.id || '' }}  
+      comment_id: ${{ github.event.comment.id || github.event.review_comment.id || github.event.review.id || '' }}
+      target_repository: ${{ github.repository }}  
